--- a/HTML_Practice.html
+++ b/HTML_Practice.html
@@ -8,13 +8,13 @@
     <div class="nav">
       <div class="container">
         <ul>
-          <li><a href="#">Airbnb logo</a></li>
-          <li><a href="#">Browse</a></li>
+          <li><a href="http://www.airbnb.com">Airbnb logo</a></li>
+          <li><a href="http://www.airbnb.com/browse">Browse</a></li>
         </ul>
         <ul>
-          <li><a href="#">Sign Up</a></li>
-          <li><a href="#">Log In</a></li>
-          <li><a href="#">Help</a></li>
+          <li><a href="http://www.airbnb.com/signup">Sign Up</a></li>
+          <li><a href="http://www.airbnb.com/login">Log In</a></li>
+          <li><a href="http://www.airbnb.com/help">Help</a></li>
         </ul>
       </div>
     </div>
